--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,27 +1,38 @@
-* {
- font-family: Helvetica, Arial, sans-serif;
+html {
+  font-size: 16px;
+  font-family: 'Space Mono', Arial, sans-serif;
+}
+
+body {
+  width: 85%;
+  align: center;
 }
 
 h1 {
   color: SeaGreen;
-  height: 60px;
+  height: 20px;
+
 }
 
-p,
-li {
+p {
   font-size: 18 px;
+  display: flex;
+  align-items: center;
 }
 
 
 .navbar {
-  position: fixed;
+  position: relative;
+  left: 50px;
+  right: 50px;
   top: 0;
   width: 100%;
   padding: 20px 0;
   background-color: #fff;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 900;
   margin-top: 60px;
+  justify-content: center;
 }
 
 .navbar .pagelinks li {
@@ -42,4 +53,11 @@ a.home {
   display: inline-block;
   padding: 10px;
   float: right;
+}
+
+.aboutme {
+  margin: auto;
+  width: 60%;
+  padding: 20px;
+  justify-content: flex-end;
 }
