--- a/resources/css/blogs.css
+++ b/resources/css/blogs.css
@@ -26,4 +26,11 @@ html {
 .navbar .pagelinks a {
     color: #4A4A4A;
 }
+
+
+.navbar .medialinks li {
+    display: inline-block;
+    padding: 10px;
+    float: right;
+}
   
