--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -1,8 +1,13 @@
 html {
     font-size: 16px;
     font-family: 'Space Mono', Arial, sans-serif;
-  }
+}
 
+body {
+    width: 85%;
+    align: center;
+}
+  
 .navbar {
     position: relative;
     left: 50px;
@@ -25,5 +30,11 @@ html {
   
 .navbar .pagelinks a {
     color: #4A4A4A;
+}
+  
+.navbar .medialinks li {
+    display: inline-block;
+    padding: 10px;
+    float: right;
 }
   
