--- a/resources/css/resume.css
+++ b/resources/css/resume.css
@@ -84,16 +84,19 @@ hr {
 .technologies {
     width: 80%;
     margin-left: auto;
+    padding-left: 8em;
     margin-right: auto;
     -webkit-column-count: 3;
     -moz-column-count: 3;
     column-count: 3;
     font-size: 0.95em;
+    column-gap: 20px;
 }
 
 .interests {
     width: 80%;
     margin-left: auto;
+    padding-left: 8em;
     margin-right: auto;
     -webkit-column-count: 3;
     -moz-column-count: 3;
