--- a/resources/css/blogs.css
+++ b/resources/css/blogs.css
@@ -40,9 +40,13 @@ body {
 
 .topics {
     margin: auto;
+    position: relative;
+    left: 50px;
+    right: 50px;
+    top: 0;
     width: 80%;
-    padding: 20px;
-    justify-content: flex-end;
+    padding: 20px 0;
+    justify-content: center;
 }
 
 .topics .desc {
