--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -57,9 +57,13 @@ a.home {
 
 .aboutme {
   margin: auto;
-  width: 60%;
-  padding: 20px;
-  justify-content: flex-end;
+  position: relative;
+  left: 50px;
+  right: 50px;
+  top: 0;
+  width: 80%;
+  padding: 20px 0;
+  justify-content: center;
 }
 
 .aboutme .stam {
