--- a/resources/css/code.css
+++ b/resources/css/code.css
@@ -38,3 +38,14 @@ body {
     float: right;
 }
   
+
+.aboutme {
+    margin: auto;
+    position: relative;
+    left: 50px;
+    right: 50px;
+    top: 0;
+    width: 80%;
+    padding: 20px 0;
+    justify-content: center;
+}
